# webApp

./: .gitignore  AutoAgent_Upgrade_Plan.md  DCIM_Integration_Plan.md  How to install1.txt  How to install2 - Copy.py  How to install2.txt  README.md  duty_roster_files_and_changes.md  pyproject.toml  setup_database.py  vite.config.js  webpack.config.js
instance/: omegaapp.sqlite  server_history.sqlite
logs/: application.log.2025-01-29  application.log.2025-01-30  application.log.2025-01-31  application.log.2025-02-01  application.log.2025-02-02  application.log.2025-02-03  application.log.2025-02-04  application.log.2025-02-05  application.log.2025-02-06  application.log.2025-02-07  application.log.2025-02-08  application.log.2025-02-10  application.log.2025-02-11  application.log.2025-02-12  application.log.2025-02-13  application.log.2025-02-14  application.log.2025-02-15  application.log.2025-02-16  application.log.2025-02-17  application.log.2025-02-18  application.log.2025-02-19  application.log.2025-02-20  application.log.2025-02-21  application.log.2025-02-22  application.log.2025-02-24  application.log.2025-02-25  application.log.2025-02-26  application.log.2025-02-27
omegaApp/: .env  Architecture.md  __init__.py  auth.py  automation_base.py  automation_manager.py  automations.py  chat_manager.py  conversation_state.py  db.py  duty_roster.py  llm_client.py  logger_manager.py  omega.py  package-lock.json  package.json  panel.py  powerConsumer.py  requirements.txt  schema.sql  server_manager.py  server_upgrade.py  websocket_server.py
omegaApp/routes/: chat.py  (+5 more)
(+189 files in other folders)
