[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omegaApp"
version = "0.1.0"
description = "A Flask-based web application for automation and panel management"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "flask",
    "flask[async]",
    "flask-cors",
    "python-dotenv",
    "urllib3==1.26.6",
    "requests",
    "websockets",
    "ucscsdk",
    "ucsmsdk",
    "networkx",
    "waitress",
    "jira",
    "watchdog",
    "aiohttp",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=omegaApp"

[tool.hatch.build.targets.wheel]
packages = ["omegaApp"]

[tool.hatch.build]
artifacts = [
    "omegaApp/static/**/*",
    "omegaApp/templates/**/*",
]
